# CTDMate

./: .env.example  .gitignore  PORTFOLIO.md  README.md
CTDAgent/: .gitignore  agent.py  pyproject.toml  registry.py  requirements.txt  settings.py
CTDAgent/tools/: ctdmate_pipeline.py  generate_solar.py  generate_validation_report.py  parse_upstage.py  save_pdf.py  validate_rag.py
ctdmate/: convert_to_pdf.py
ctdmate/app/: router.py
ctdmate/output/: M1.yaml  M2_3.yaml  M2_4.yaml  M2_5.yaml  M2_6.yaml  M2_7.yaml  generation_summary.json
ctdmate/ui/: api.py
ctdmate/utils/: __init__.py  pdf_generator.py
static/: index.html  script.js  style.css
